<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:rowCount="4"
    android:columnCount="2">
    <!--Majority of details to make the items fit in the grid were given in the assignment-->

        <!-- Majority of code here for TextView came pregenerated by Android Studio-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GUIMessage"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:layout_columnSpan="2"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:layout_columnSpan="1"/>

        <!--Height and width for flag hard coded, as wrap_content leaves a gray border-->
        <ImageButton
            android:layout_width="200dp"
            android:layout_height="145dp"
            android:src="@drawable/flag"
            android:text="Flag"
            android:layout_weight="1"
            android:layout_gravity="fill" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:layout_columnSpan="2"/>

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/CheckboxMessage"
            android:layout_weight="1"
            android:layout_gravity="fill" />

        <Switch
            android:id="@+id/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Switch"
            android:layout_weight="1"
            android:layout_gravity="fill" />



</GridLayout>