<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <!--Majority of code here for TextView came pregenerated by Android Studio-->
        <!-- Added relative layout tags-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GUIMessage"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/TextView"/>

        <!--Button is bellow TextView-->
        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_below="@+id/TextView" />

        <!--CheckBox is both beside Button and below TextView-->
        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/CheckboxMessage"
            android:layout_toEndOf="@+id/button"
            android:layout_below="@+id/TextView"/>

        <!--Flag is below button-->
        <!--Height and width for flag hard coded, as wrap_content leaves a gray border-->
        <ImageButton
            android:id="@+id/Flag"
            android:layout_width="200dp"
            android:layout_height="145dp"
            android:src="@drawable/flag"
            android:text="Flag"
            android:layout_below="@+id/button"/>

        <!--Switch is both bellow button and beside Flag-->
        <Switch
            android:id="@+id/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Switch"
            android:layout_below="@+id/CheckBox"
            android:layout_toEndOf="@id/Flag"/>

        <!--Text is below Flag-->
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:layout_below="@+id/Flag"/>

</RelativeLayout>