<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <!--As is mentioned in the later code, all details for this layout were given in the assignment document-->
    <!--LinearLayout details given in assignment   -->

    <!--Majority of code here for TextView came pregenerated by Android Studio-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="350dp">
    <!--LinearLayout details given in assignment-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GUIMessage"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="350dp">
        <!--LinearLayout details given in assignment-->

        <Button
            android:id="@+id/button"
            android:layout_weight="1"
            android:gravity="fill"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_width="200dp"/>

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/CheckboxMessage"
            android:layout_weight="1"
            android:layout_gravity="fill"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="350dp">
        <!--LinearLayout details given in assignment-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:src="@drawable/flag"
            android:text="Flag"
            android:layout_weight="1"
            android:layout_gravity="fill"/>

        <Switch
            android:id="@+id/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Switch"
            android:layout_weight="1"
            android:layout_gravity="fill"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="350dp">
        <!--LinearLayout details given in assignment-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textPersonName" />

    </LinearLayout>


</LinearLayout>